# hiroz

./: Cargo.toml  architecture.html  codecov.yml  index.html  sitemap.xml
.github/workflows/: ci.yml  release.yml  test.yml
MDBOOK_INTEGRATION/: index.html
bindings/go/: index.html
bindings/go-quick-start/: index.html
bindings/python/: index.html
core-concepts/lifecycle/: index.html
core-concepts/parameters/: index.html
crates/hiroz/: Cargo.toml
crates/hiroz-bridge/: Cargo.toml
crates/hiroz-cdr/: Cargo.toml
crates/hiroz-codegen/: Cargo.toml
crates/hiroz-codegen-go/: roundtrip_integration_test.go
crates/hiroz-codegen/assets/jazzy/: dependencies.json
crates/hiroz-codegen/src/: lib.rs  protobuf_generator.rs
crates/hiroz-console/: Cargo.toml
crates/hiroz-console/src/: main.rs
crates/hiroz-console/src/app/: mod.rs  state.rs
crates/hiroz-console/src/app/render/: measure.rs  mod.rs  nodes.rs  services.rs  topics.rs
crates/hiroz-console/src/core/: echo.rs  engine.rs  logger.rs  mod.rs
crates/hiroz-console/src/modes/: headless.rs
crates/hiroz-derive/: Cargo.toml
crates/hiroz-go/examples/action_client_errors/: main.go
crates/hiroz-go/examples/production_service/: README.md
crates/hiroz-go/examples/production_service/cmd/client/: client.go
crates/hiroz-go/examples/service_client_errors/: main.go
crates/hiroz-go/hiroz/: action_typed.go  closed_handle_test.go  service.go  service_action_test.go  service_typed.go
crates/hiroz-go/interop_tests/: README.md  common_test.go  hiroz_rust_test.go  pubsub_test.go
crates/hiroz-msgs/: Cargo.toml  build.rs
crates/hiroz-protocol/: Cargo.toml
crates/hiroz-py/: Cargo.toml
crates/hiroz-py/python/hiroz_py/: __init__.pyi
crates/hiroz-py/src/: service.rs
crates/hiroz-py/tests/: test_rclpy_alignment.py
crates/hiroz-schema/: Cargo.toml
crates/hiroz-tests/: Cargo.toml
crates/hiroz-tests/tests/: action_interop.rs  tf_integration.rs
crates/hiroz-tf/: Cargo.toml  README.md
crates/hiroz-tf/src/: broadcaster.rs  buffer.rs  lib.rs  lookup.rs  math.rs
crates/hiroz/src/: config.rs  context.rs  msg.rs  node.rs  pubsub.rs
crates/hiroz/src/action/: driver.rs  server.rs
crates/hiroz/src/dynamic/: mod.rs  registry.rs
crates/hiroz/src/lifecycle/: node.rs
crates/hiroz/tests/: shm_estimate_regression.rs  shm_selectivity.rs
crates/rmw-zenoh-rs/: Cargo.toml
crates/ros-z-tf/: Cargo.toml  README.md
crates/ros-z-tf/src/: broadcaster.rs  buffer.rs  lib.rs  lookup.rs  math.rs
docs/: MDBOOK_INTEGRATION.md
docs/bindings/: go.md
docs/mdbook/: go_bindings_mdbook.md
docs/user-guide/: go_interop_tests.md
experimental/keyexpr-formats/: index.html
getting-started/distro-compatibility/: index.html
getting-started/nix/: index.html
mdbook/go_bindings_mdbook/: index.html
overrides/: home.html
pr-preview/pr-189/: architecture.html  index.html
pr-preview/pr-189/bindings/python-codegen/: index.html
pr-preview/pr-189/core-concepts/: action-lifecycle.html
pr-preview/pr-189/core-concepts/actions/: index.html
pr-preview/pr-189/core-concepts/actions-advanced/: index.html
pr-preview/pr-189/core-concepts/message-cache/: index.html
pr-preview/pr-189/experimental/rmw-zenoh-rs/: index.html
pr-preview/pr-189/javascripts/: action-anim.js  flashcards.js
pr-preview/pr-189/overrides/: home.html
pr-preview/pr-189/stylesheets/: actions.css
pr-preview/pr-189/tools/console/: index.html
pr-preview/pr-189/user-guide/interop/: index.html
pr-preview/pr-189/user-guide/message-generation/: index.html
pr-preview/pr-189/user-guide/networking/: index.html
pr-preview/pr-189/user-guide/protobuf/: index.html
pr-preview/pr-190/: 404.html  index.html
pr-preview/pr-190/bindings/go/: index.html
pr-preview/pr-190/bindings/go-quick-start/: index.html
pr-preview/pr-190/bindings/python/: index.html
pr-preview/pr-190/bindings/python-codegen/: index.html
pr-preview/pr-190/bindings/python-quick-start/: index.html
pr-preview/pr-190/core-concepts/actions/: index.html
pr-preview/pr-190/core-concepts/actions-advanced/: index.html
pr-preview/pr-190/core-concepts/lifecycle/: index.html
pr-preview/pr-190/core-concepts/message-cache/: index.html
pr-preview/pr-190/core-concepts/parameters/: index.html
pr-preview/pr-190/core-concepts/pubsub/: index.html
pr-preview/pr-190/core-concepts/services/: index.html
pr-preview/pr-190/experimental/keyexpr-formats/: index.html
pr-preview/pr-190/experimental/rmw-zenoh-rs/: index.html
pr-preview/pr-190/experimental/shm/: index.html
pr-preview/pr-190/getting-started/building/: index.html
pr-preview/pr-190/getting-started/distro-compatibility/: index.html
pr-preview/pr-190/getting-started/nix/: index.html
pr-preview/pr-190/getting-started/quick-start/: index.html
pr-preview/pr-190/javascripts/: mermaid.js
pr-preview/pr-190/reference/feature-comparison/: index.html
pr-preview/pr-190/reference/feature-flags/: index.html
pr-preview/pr-190/reference/ros2-to-hiroz/: index.html
pr-preview/pr-190/reference/troubleshooting/: index.html
pr-preview/pr-190/search/: search_index.json
pr-preview/pr-190/tools/console/: index.html
pr-preview/pr-190/user-guide/bridge/: index.html
pr-preview/pr-190/user-guide/config-advanced/: index.html
pr-preview/pr-190/user-guide/config-options/: index.html
pr-preview/pr-190/user-guide/custom-messages/: index.html
pr-preview/pr-190/user-guide/examples/: index.html
pr-preview/pr-190/user-guide/go_interop_tests/: index.html
pr-preview/pr-190/user-guide/interop/: index.html
pr-preview/pr-190/user-guide/message-generation/: index.html
pr-preview/pr-190/user-guide/networking/: index.html
pr-preview/pr-190/user-guide/protobuf/: index.html
reference/feature-comparison/: index.html
reference/feature-flags/: index.html
reference/ros2-to-hiroz/: index.html
search/: search_index.json
stylesheets/: home.css
user-guide/config-options/: index.html
user-guide/custom-messages/: index.html
user-guide/examples/: index.html
user-guide/go_interop_tests/: index.html
(+1 files in other folders)
