[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Native Rust ROS 2 implementation using Zenoh"
homepage = "https://github.com/ZettaScaleLabs/hiroz"

[workspace]
resolver = "2"
members = [
  "crates/hiroz",
  "crates/hiroz-cdr",
  "crates/hiroz-codegen",
  "crates/hiroz-derive",
  "crates/hiroz-protocol",
  "crates/hiroz-py",
  "crates/rmw-zenoh-rs",
  "crates/hiroz-schema",
  "crates/hiroz-msgs",
  "crates/hiroz-tests",
  "crates/hiroz-tf",
  "crates/hiroz-console",
  "crates/hiroz-bridge",
  "crates/hiroz/examples/protobuf_demo",
]
default-members = ["crates/hiroz", "crates/hiroz-codegen"]
# Note: protobuf_demo is an advanced example demonstrating protobuf serialization
# Note: Go packages are in:
# - crates/hiroz-codegen-go/ (code generator)
# - crates/hiroz-go/ (runtime library)

[workspace.dependencies]
# Workspace members
hiroz = { version = "*", path = "crates/hiroz" }
hiroz-codegen = { version = "*", path = "crates/hiroz-codegen" }
hiroz-protocol = { version = "*", path = "crates/hiroz-protocol" }
rmw-zenoh-rs = { version = "*", path = "crates/rmw-zenoh-rs" }
hiroz-schema = { version = "*", path = "crates/hiroz-schema" }

# Serialization
hiroz-cdr = { path = "crates/hiroz-cdr" }
serde = "1.0.219"
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"

# Zenoh
zenoh = { version = "1.9.0", default-features = false, features = [
  "transport_tcp",
  "transport_serial",
] }
zenoh-ext = { version = "1.9.0", features = ["unstable"] }
zenoh-buffers = { version = "1.9.0" }

# CLI
clap = "4.5.45"

# Async/sync primitives
flume = "0.11.1"
parking_lot = "0.12.4"
tokio = "1.47.1"
tokio-util = "0.7"
event-listener = "5"

# Utilities
tracing = "0.1.41"
strum = "0.27.2"
sha2 = "0.10.9"
slab = "0.4.11"
byteorder = "1.3"
csv = "1.3.1"
json5 = "0.4.1"
once_cell = "1.19"
hex = "0.4"

# FFI
cxx = "1.0.168"

# Python
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Code generation
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
anyhow = "1.0"
glob = "0.3"

# Protobuf (optional)
prost = "0.14"
prost-build = "0.14"

# Derive macros
smart-default = "0.7"
serde-big-array = "0.5"

# Build dependencies
bindgen = "0.72.0"
cxx-build = "1.0.168"

[profile.opt]
inherits = "release"
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
