[package]
name = "hiroz-cdr"
version.workspace = true
edition.workspace = true
description = "CDR serialization for hiroz"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ros2", "zenoh", "cdr", "serialization", "robotics"]
categories = ["encoding", "network-programming"]

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
zenoh-buffers = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
