[package]
name = "hiroz-codegen"
version.workspace = true
edition.workspace = true
description = "Build-time code generator for ROS 2 message, service, and action types"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ros2", "zenoh", "codegen", "build", "robotics"]
categories = ["development-tools::build-utils"]

# Include vendored assets in published crate
include = [
  "build.rs",
  "src/**/*",
  "assets/**/*.msg",
  "assets/**/*.srv",
  "assets/**/*.action",
  "assets/**/dependencies.json",
  "Cargo.toml",
]

[[bin]]
name = "export_json"
path = "src/bin/export_json.rs"

[dependencies]
# For code manipulation
quote = { workspace = true }
prost-build = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "parsing"] }
proc-macro2 = { workspace = true }
prettyplease = "0.2"
# For error handling
anyhow = { workspace = true }
# For type hashing (RIHS01) - now uses hiroz-schema
hiroz-schema = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3"
hiroz-cdr = { path = "../hiroz-cdr" }
serde = { workspace = true, features = ["derive"] }
insta = "1"

[features]
default = []
protobuf = ["prost-build"]
