[package]
name = "hiroz-derive"
version.workspace = true
edition.workspace = true
description = "Derive macros for hiroz Python bindings"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ros2", "zenoh", "derive", "macros", "robotics"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true
