[package]
name = "hiroz-msgs"
version.workspace = true
edition.workspace = true

[dependencies]
hiroz = { path = "../hiroz", default-features = false, features = [
  "rmw-zenoh",
] }
serde = { workspace = true }
serde_bytes = { workspace = true }
# Required by pure-Rust codegen
smart-default = { workspace = true }
serde-big-array = { workspace = true }
zenoh-buffers = { workspace = true }

prost = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
hiroz-derive = { path = "../hiroz-derive", optional = true }
hiroz-cdr = { workspace = true }
byteorder = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
parking_lot = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

[dev-dependencies]
byteorder = { workspace = true }

[build-dependencies]
hiroz-codegen = { version = "0.1", path = "../hiroz-codegen" }
anyhow = { workspace = true }
glob = { workspace = true }

[features]
default = ["core_msgs"]

# Core messages - commonly used ROS 2 interfaces
core_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
  "rcl_interfaces",
]

# Individual packages (all vendored in assets)
rcl_interfaces = []
std_msgs = []
geometry_msgs = ["std_msgs"]
sensor_msgs = ["std_msgs", "geometry_msgs"]
nav_msgs = ["std_msgs", "geometry_msgs"]
tf2_msgs = ["geometry_msgs"]
example_interfaces = []
action_tutorials_interfaces = []
test_msgs = []

# Convenience aliases
common_interfaces = ["std_msgs", "geometry_msgs", "sensor_msgs"]
robotics = ["core_msgs"]
all_msgs = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "tf2_msgs",
  "example_interfaces",
  "action_tutorials_interfaces",
  "rcl_interfaces",
  "test_msgs",
]

bundled_msgs = ["std_msgs", "geometry_msgs", "sensor_msgs", "nav_msgs"]

protobuf = ["prost", "hiroz/protobuf", "hiroz-codegen/protobuf"]

# ROS 2 distro compatibility - propagate to hiroz
humble = ["hiroz/humble"]
jazzy = ["hiroz/jazzy"]
rolling = ["hiroz/rolling"]
kilted = ["hiroz/kilted"]
lyrical = ["hiroz/lyrical"]
python_registry = [
  "pyo3",
  "parking_lot",
  "once_cell",
  "hiroz-derive",
  "hiroz/python",
]
