[package]
name = "hiroz-py"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["jazzy"]
jazzy = ["hiroz/jazzy"]
humble = ["hiroz/humble"]
kilted = ["hiroz/kilted"]
rolling = ["hiroz/rolling"]
lyrical = ["hiroz/lyrical"]

[dependencies]
pyo3 = { workspace = true }
hiroz = { path = "../hiroz", default-features = false }
hiroz-cdr = { workspace = true }
hiroz-msgs = { path = "../hiroz-msgs", features = [
  "python_registry",
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "example_interfaces",
] }
zenoh = { workspace = true }
zenoh-buffers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
flume = { workspace = true }
once_cell = "1.19"

[build-dependencies]
anyhow = { workspace = true }
